<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/midblue"
    android:orientation="vertical"
    android:weightSum="33">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/_67_6_23_pm"
        android:gravity="end"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="16"
        android:background="@color/lightblue"
        android:orientation="vertical"
        android:weightSum="13">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="12"
            android:weightSum="12"
            android:orientation="vertical"
            android:padding="30dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/login"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/white"
                android:layout_weight="2"
                android:layout_margin="5dp"
                android:hint="@string/email"
                android:gravity="center"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/white"
                android:layout_weight="2"
                android:layout_margin="5dp"
                android:hint="@string/password"
                android:gravity="center"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/go"
                android:textColor="@color/white"
                android:backgroundTint="@color/lightblue"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"/>
        </LinearLayout>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:rotation="90"
            android:outlineSpotShadowColor="@color/black"
            android:src="@drawable/outline_chevron_right_24"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="16"
        android:background="@color/white"
        android:orientation="vertical"
        android:weightSum="12"
        android:padding="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="5dp"
            android:text="@string/login_with_facebook"
            android:textColor="@color/white"
            android:backgroundTint="@color/midblue"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="5dp"
            android:text="@string/login_with_twitter"
            android:textColor="@color/white"
            android:backgroundTint="@color/lightblue" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/create_an_account"
            android:textColor="@color/grey"
            android:textStyle="bold"
            android:backgroundTint="@color/white" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:weightSum="21"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:layout_gravity="center"
                android:gravity="end"
                android:text="@string/about_us"
                android:textColor="@color/grey"
                android:backgroundTint="@color/white" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/teiler"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:layout_gravity="center"
                android:gravity="start"
                android:text="@string/contact"
                android:textColor="@color/grey"
                android:backgroundTint="@color/white" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>