<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkgrey">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:weightSum="10"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/lightgrey">
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/grey"
            android:orientation="vertical"
            android:text="@string/relative_layout_examples"
            android:textColor="@color/lightgrey"
            android:textSize="20dp">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:weightSum="15"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/red"
                android:text="@string/red"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="20dp">
            </TextView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="@color/black">
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@color/orange"
                android:text="@string/orange"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="20dp">
            </TextView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@color/black">
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@color/yellow"
                android:text="@string/yellow"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="20dp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/black">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:weightSum="15"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@color/black">
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@color/green"
                android:text="@string/green"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_margin="5dp">
            </TextView>


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@color/blue"
                android:text="@string/blue"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_margin="5dp">
            </TextView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@color/indigo"
                android:text="@string/indigo"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_margin="5dp">
            </TextView>

            <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/black">
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/black">
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/violet"
            android:text="@string/violet"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20dp">
        </TextView>

    </LinearLayout>

</LinearLayout>