<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.07"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.14"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.35"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.45"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.65"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.75"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.13"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.2"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.4"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.6"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.8"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/lightgrey"
        app:layout_constraintBottom_toBottomOf="@id/guideline1h"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/grey"
        android:text="@string/relative_layout_examples"
        android:textColor="@color/lightgrey"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline2h"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline1h"></TextView>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/red"
        android:gravity="center"
        android:text="@string/red"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline3h"
        app:layout_constraintEnd_toEndOf="@id/guideline1v"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline2h"></TextView>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/orange"
        android:gravity="center"
        android:text="@string/orange"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline3h"
        app:layout_constraintEnd_toEndOf="@id/guideline4v"
        app:layout_constraintStart_toStartOf="@id/guideline3v"
        app:layout_constraintTop_toTopOf="@id/guideline2h"></TextView>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/yellow"
        android:gravity="center"
        android:text="@string/yellow"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline3h"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline5v"
        app:layout_constraintTop_toTopOf="@id/guideline2h"></TextView>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:background="@color/green"
        android:gravity="center"
        android:text="@string/green"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline5h"
        app:layout_constraintEnd_toEndOf="@id/guideline3v"
        app:layout_constraintStart_toStartOf="@id/guideline2v"
        app:layout_constraintTop_toTopOf="@id/guideline4h"></TextView>


    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/blue"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline5h"
        app:layout_constraintEnd_toEndOf="@id/guideline4v"
        app:layout_constraintStart_toStartOf="@id/guideline3v"
        app:layout_constraintTop_toTopOf="@id/guideline4h"></TextView>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:background="@color/indigo"
        android:gravity="center"
        android:text="@string/indigo"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline5h"
        app:layout_constraintEnd_toEndOf="@id/guideline5v"
        app:layout_constraintStart_toStartOf="@id/guideline4v"
        app:layout_constraintTop_toTopOf="@id/guideline4h"></TextView>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/violet"
        android:gravity="center"
        android:text="@string/violet"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline6h"></TextView>

</androidx.constraintlayout.widget.ConstraintLayout>